<?xml version="1.0"?>
<package format="2">
  <name>go1_imu_republisher</name>
  <version>0.1.0</version>
  <description>Unitree Go1 IMU LCM Republisher node</description>

  <maintainer email="hi@aatb.ch">Thibault Brevet</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/aatb-ch/go1-imu-republisher</url>
  <author email="hi@aatb.ch">AATB GmbH / Thibault Brevet</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
